--- a/roles/kernel-sysctl-tweak/tasks/install.yml
+++ b/roles/kernel-sysctl-tweak/tasks/install.yml
@@ -5,10 +5,10 @@
 # ---------------------------------------------------------------------------------------------------------------------
 
 - set_fact:
-    travis_running: "{{ lookup('env','TRAVIS_RUNNING') | bool }}"
+    force_sysctl_reload: "{{ lookup('env','FORCE_SYSCTL_RELOAD') | bool }}"
 
-- shell: echo "I've travis running ('{{ travis_running }}') and am not afraid to use it!"
-  when: travis_running is defined
+- shell: echo "I've travis running ('{{ force_sysctl_reload }}') and am not afraid to use it!"
+  when: force_sysctl_reload is defined
 
 - name: modprobe | add ip_conntrack kernel module
   modprobe:
@@ -25,7 +25,7 @@
     name: fs.file-max
     value: "{{ file_max }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] do less swapping (1/3)
@@ -34,7 +34,7 @@
     name: vm.swappiness
     value: "{{ swappiness }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] do less swapping (2/3)
@@ -43,7 +43,7 @@
     name: vm.dirty_ratio
     value: "{{ dirty_ratio }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] do less swapping (3/3)
@@ -52,7 +52,7 @@
     name: vm.dirty_background_ratio
     value: "{{ dirty_background_ratio }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] prevent kernel NULL pointer dereference
@@ -61,7 +61,7 @@
     name: vm.mmap_min_addr
     value: "{{ mmap_min_addr }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] sets the time before the kernel considers migrating a process to another core
@@ -70,7 +70,7 @@
     name: kernel.sched_migration_cost_ns
     value: "{{ sched_migration_cost_ns }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] guarding against malicious software attacks, activate address space layout randomization (ASLR)
@@ -79,7 +79,7 @@
     name: kernel.randomize_va_space
     value: "{{ randomize_va_space }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] hiding kernel pointers from unprivileged users
@@ -88,7 +88,7 @@
     name: kernel.kptr_restrict
     value: "{{ kptr_restrict }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] prevent unprivileged users from viewing dmesg command output
@@ -97,7 +97,7 @@
     name: kernel.dmesg_restrict
     value: "{{ dmesg_restrict }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] activate YAMA system-wide DAC security protections that are not handled by the core kernel itself
@@ -106,7 +106,7 @@
     name: kernel.yama.ptrace_scope
     value: "{{ ptrace_scope }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
@@ -119,7 +119,7 @@
     name: net.ipv4.tcp_synack_retries
     value: "{{ tcp_synack_retries }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] number of times SYNs for passive TCP connection
@@ -128,7 +128,7 @@
     name: net.ipv4.tcp_syn_retries
     value: "{{ tcp_syn_retries }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] allowed local port range
@@ -137,7 +137,7 @@
     name: net.ipv4.ip_local_port_range
     value: "{{ ip_local_port_range }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] protect against TCP Time-Wait
@@ -146,7 +146,7 @@
     name: net.ipv4.tcp_rfc1337
     value: "{{ tcp_rfc1337 }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] control synCookies
@@ -155,7 +155,7 @@
     name: net.ipv4.tcp_syncookies
     value: "{{ tcp_syncookies }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] decrease the time default value for tcp_fin_timeout connection
@@ -164,7 +164,7 @@
     name: net.ipv4.tcp_fin_timeout
     value: "{{ tcp_fin_timeout }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (1/3)
@@ -173,7 +173,7 @@
     name: net.ipv4.tcp_keepalive_time
     value: "{{ tcp_keepalive_time }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (2/3)
@@ -182,7 +182,7 @@
     name: net.ipv4.tcp_keepalive_probes
     value: "{{ tcp_keepalive_probes }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (3/3)
@@ -191,7 +191,7 @@
     name: net.ipv4.tcp_keepalive_intvl
     value: "{{ tcp_keepalive_intvl }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] mitigate TCP SYN Flood Attacks / decent DDoS attacks
@@ -200,7 +200,7 @@
     name: net.netfilter.nf_conntrack_tcp_loose
     value: "{{ nf_conntrack_tcp_loose }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] tweak network settings for large number of concurrent clients
@@ -209,7 +209,7 @@
     name: net.ipv4.tcp_max_orphans
     value: "{{ tcp_max_orphans }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
@@ -222,7 +222,7 @@
     name: net.core.rmem_default
     value: "{{ rmem_default }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] maximum socket receive buffer
@@ -231,7 +231,7 @@
     name: net.core.rmem_max
     value: "{{ rmem_max }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] default socket send buffer
@@ -240,7 +240,7 @@
     name: net.core.wmem_default
     value: "{{ wmem_default }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] maximum socket send buffer
@@ -249,7 +249,7 @@
     name: net.core.wmem_max
     value: "{{ wmem_max }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase number of incoming connections
@@ -258,7 +258,7 @@
     name: net.core.somaxconn
     value: "{{ somaxconn }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase number of incoming connections backlog
@@ -267,7 +267,7 @@
     name: net.core.netdev_max_backlog
     value: "{{ netdev_max_backlog }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase number of incoming connections backlog (wall against synFlood DOS attack)
@@ -276,7 +276,7 @@
     name: net.ipv4.tcp_max_syn_backlog
     value: "{{ tcp_max_syn_backlog }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the maximum amount of option memory buffers
@@ -285,7 +285,7 @@
     name: net.core.optmem_max
     value: "{{ optmem_max }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [1/2]
@@ -294,7 +294,7 @@
     name: net.ipv4.tcp_mem
     value: "{{ tcp_mem }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [2/2]
@@ -303,7 +303,7 @@
     name: net.ipv4.udp_mem
     value: "{{ udp_mem }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the read-buffer space allocatable (1/2)
@@ -312,7 +312,7 @@
     name: net.ipv4.tcp_rmem
     value: "{{ tcp_rmem }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the read-buffer space allocatable (2/2)
@@ -321,7 +321,7 @@
     name: net.ipv4.udp_rmem_min
     value: "{{ udp_rmem_min }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the write-buffer-space allocatable (1/2)
@@ -330,7 +330,7 @@
     name: net.ipv4.tcp_wmem
     value: "{{ tcp_wmem }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the write-buffer-space allocatable (2/2)
@@ -339,7 +339,7 @@
     name: net.ipv4.udp_wmem_min
     value: "{{ udp_wmem_min }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (1/3)
@@ -348,7 +348,7 @@
     name: net.ipv4.tcp_max_tw_buckets
     value: "{{ tcp_max_tw_buckets }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (2/3)
@@ -357,7 +357,7 @@
     name: net.ipv4.tcp_tw_recycle
     value: "{{ tcp_tw_recycle }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (3/3)
@@ -366,5 +366,5 @@
     name: net.ipv4.tcp_tw_reuse
     value: "{{ tcp_tw_reuse }}"
     state: present
-    reload: "{{ travis_running | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('yes') }}"
   become: yes
