--- a/roles/kernel-sysctl-tweak/tasks/install.yml
+++ b/roles/kernel-sysctl-tweak/tasks/install.yml
@@ -4,15 +4,6 @@
 # INJECT REQUIRED KERNEL MODULES
 # ---------------------------------------------------------------------------------------------------------------------
 
-- debug: msg="{{ lookup('env','TRAVIS') }} is an environment variable"
-- debug: msg="{{ lookup('env','TRAVIS') | default('false', true) }} is the converted environment variable"
-
-- set_fact:
-    force_sysctl_reload: "{{ lookup('env', 'TRAVIS') | default('false', true) }}"
-
-- shell: echo "I've travis running ('{{ force_sysctl_reload }}') and am not afraid to use it!"
-  when: force_sysctl_reload is defined
-
 - name: modprobe | add ip_conntrack kernel module
   modprobe:
     name: ip_conntrack
@@ -28,7 +19,7 @@
     name: fs.file-max
     value: "{{ file_max }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] do less swapping (1/3)
@@ -37,7 +28,7 @@
     name: vm.swappiness
     value: "{{ swappiness }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] do less swapping (2/3)
@@ -46,7 +37,7 @@
     name: vm.dirty_ratio
     value: "{{ dirty_ratio }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] do less swapping (3/3)
@@ -55,7 +46,7 @@
     name: vm.dirty_background_ratio
     value: "{{ dirty_background_ratio }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] prevent kernel NULL pointer dereference
@@ -64,7 +55,7 @@
     name: vm.mmap_min_addr
     value: "{{ mmap_min_addr }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] sets the time before the kernel considers migrating a process to another core
@@ -73,7 +64,7 @@
     name: kernel.sched_migration_cost_ns
     value: "{{ sched_migration_cost_ns }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] guarding against malicious software attacks, activate address space layout randomization (ASLR)
@@ -82,7 +73,7 @@
     name: kernel.randomize_va_space
     value: "{{ randomize_va_space }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] hiding kernel pointers from unprivileged users
@@ -91,7 +82,7 @@
     name: kernel.kptr_restrict
     value: "{{ kptr_restrict }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] prevent unprivileged users from viewing dmesg command output
@@ -100,7 +91,7 @@
     name: kernel.dmesg_restrict
     value: "{{ dmesg_restrict }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] activate YAMA system-wide DAC security protections that are not handled by the core kernel itself
@@ -109,7 +100,7 @@
     name: kernel.yama.ptrace_scope
     value: "{{ ptrace_scope }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
@@ -122,7 +113,7 @@
     name: net.ipv4.tcp_synack_retries
     value: "{{ tcp_synack_retries }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] number of times SYNs for passive TCP connection
@@ -131,7 +122,7 @@
     name: net.ipv4.tcp_syn_retries
     value: "{{ tcp_syn_retries }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] allowed local port range
@@ -140,7 +131,7 @@
     name: net.ipv4.ip_local_port_range
     value: "{{ ip_local_port_range }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] protect against TCP Time-Wait
@@ -149,7 +140,7 @@
     name: net.ipv4.tcp_rfc1337
     value: "{{ tcp_rfc1337 }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] control synCookies
@@ -158,7 +149,7 @@
     name: net.ipv4.tcp_syncookies
     value: "{{ tcp_syncookies }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] decrease the time default value for tcp_fin_timeout connection
@@ -167,7 +158,7 @@
     name: net.ipv4.tcp_fin_timeout
     value: "{{ tcp_fin_timeout }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (1/3)
@@ -176,7 +167,7 @@
     name: net.ipv4.tcp_keepalive_time
     value: "{{ tcp_keepalive_time }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (2/3)
@@ -185,7 +176,7 @@
     name: net.ipv4.tcp_keepalive_probes
     value: "{{ tcp_keepalive_probes }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] decrease the time default value for connections to keep alive (3/3)
@@ -194,7 +185,7 @@
     name: net.ipv4.tcp_keepalive_intvl
     value: "{{ tcp_keepalive_intvl }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] mitigate TCP SYN Flood Attacks / decent DDoS attacks
@@ -203,7 +194,7 @@
     name: net.netfilter.nf_conntrack_tcp_loose
     value: "{{ nf_conntrack_tcp_loose }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] tweak network settings for large number of concurrent clients
@@ -212,7 +203,7 @@
     name: net.ipv4.tcp_max_orphans
     value: "{{ tcp_max_orphans }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # ---------------------------------------------------------------------------------------------------------------------
@@ -225,7 +216,7 @@
     name: net.core.rmem_default
     value: "{{ rmem_default }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] maximum socket receive buffer
@@ -234,7 +225,7 @@
     name: net.core.rmem_max
     value: "{{ rmem_max }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] default socket send buffer
@@ -243,7 +234,7 @@
     name: net.core.wmem_default
     value: "{{ wmem_default }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] maximum socket send buffer
@@ -252,7 +243,7 @@
     name: net.core.wmem_max
     value: "{{ wmem_max }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase number of incoming connections
@@ -261,7 +252,7 @@
     name: net.core.somaxconn
     value: "{{ somaxconn }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase number of incoming connections backlog
@@ -270,7 +261,7 @@
     name: net.core.netdev_max_backlog
     value: "{{ netdev_max_backlog }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase number of incoming connections backlog (wall against synFlood DOS attack)
@@ -279,7 +270,7 @@
     name: net.ipv4.tcp_max_syn_backlog
     value: "{{ tcp_max_syn_backlog }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the maximum amount of option memory buffers
@@ -288,7 +279,7 @@
     name: net.core.optmem_max
     value: "{{ optmem_max }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [1/2]
@@ -297,7 +288,7 @@
     name: net.ipv4.tcp_mem
     value: "{{ tcp_mem }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the maximum total buffer-space allocatable (his is measured in units of pages (4096 bytes) [2/2]
@@ -306,7 +297,7 @@
     name: net.ipv4.udp_mem
     value: "{{ udp_mem }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the read-buffer space allocatable (1/2)
@@ -315,7 +306,7 @@
     name: net.ipv4.tcp_rmem
     value: "{{ tcp_rmem }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the read-buffer space allocatable (2/2)
@@ -324,7 +315,7 @@
     name: net.ipv4.udp_rmem_min
     value: "{{ udp_rmem_min }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the write-buffer-space allocatable (1/2)
@@ -333,7 +324,7 @@
     name: net.ipv4.tcp_wmem
     value: "{{ tcp_wmem }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the write-buffer-space allocatable (2/2)
@@ -342,7 +333,7 @@
     name: net.ipv4.udp_wmem_min
     value: "{{ udp_wmem_min }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (1/3)
@@ -351,7 +342,7 @@
     name: net.ipv4.tcp_max_tw_buckets
     value: "{{ tcp_max_tw_buckets }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (2/3)
@@ -360,7 +351,7 @@
     name: net.ipv4.tcp_tw_recycle
     value: "{{ tcp_tw_recycle }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
 
 # [000.1] increase the tcp-time-wait buckets pool size to prevent simple DDoS attacks (3/3)
@@ -369,5 +360,5 @@
     name: net.ipv4.tcp_tw_reuse
     value: "{{ tcp_tw_reuse }}"
     state: present
-    reload: "{{ force_sysctl_reload | default('yes') }}"
+    reload: "{{ force_sysctl_reload | default('no') }}"
   become: yes
